--- a/index.html
+++ b/index.html
@@ -2791,8 +2791,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/8zbFw7rKzc">
+                    <img src="https://down-br.img.susercontent.com/file/sg-11134201-7qvff-lh6svtin0mpmfa" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -2806,15 +2806,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/8zbFw7rKzc">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/8zbFw7rKzc">Camisa Branca Masculina De Treinamento Esportivo De Manga Curta MNL (MG) Da América Football Club Team 2022/23 America</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$62,99 - R$76,99</data>
                   </div>
                 </a>
 
