--- a/index.html
+++ b/index.html
@@ -2825,8 +2825,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/6AH4Z1ddpJ">
+                    <img src="https://down-br.img.susercontent.com/file/cn-11134207-7qukw-lgjoemvgy0la1c" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -2840,15 +2840,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/6AH4Z1ddpJ">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/6AH4Z1ddpJ">Camisa De Futebol 23/24 Mineiro Tailândia Edição 1 : 1</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$65,90 - R$90,90</data>
                   </div>
                 </a>
 
@@ -2859,8 +2859,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/1VVF0W2agT">
+                    <img src="https://down-br.img.susercontent.com/file/sg-11134201-7qvex-lgmrq30tv0bo97" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -2874,15 +2874,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/1VVF0W2agT">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/1VVF0W2agT">Camisa De Time 23/24 Bahia I camisa de futebol BYY</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$59,99 - R$75,99</data>
                   </div>
                 </a>
 
