--- a/index.html
+++ b/index.html
@@ -2893,8 +2893,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/5peEAd07sa">
+                    <img src="https://down-br.img.susercontent.com/file/cn-11134207-7qukw-lfgpyfayoywo61" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -2908,15 +2908,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/5peEAd07sa">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/5peEAd07sa">Camiseta De Futebol Botafogo Tailândia 1 : 1 De Alta Qualidade 2023/2024</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$57,80 - R$77,80</data>
                   </div>
                 </a>
 
