--- a/index.html
+++ b/index.html
@@ -2723,8 +2723,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/2VNmCjFY0a">
+                    <img src="https://down-br.img.susercontent.com/file/br-11134207-7qukw-lepxjy2909le8c" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -2738,15 +2738,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/2VNmCjFY0a">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/2VNmCjFY0a">Camisa Coritiba 2023-2024</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$32,90</data>
                   </div>
                 </a>
 
