--- a/index.html
+++ b/index.html
@@ -2927,8 +2927,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/4fSGqugzl0">
+                    <img src="https://down-br.img.susercontent.com/file/sg-11134201-7qve9-lfl8hl3ftmmd5f" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -2942,15 +2942,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/4fSGqugzl0">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/4fSGqugzl0">Camisa De Futebol 23-24 Cruzeiro Goleiro II 1:1</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$59,74 - R$82,02</data>
                   </div>
                 </a>
 
@@ -2961,8 +2961,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/9KE6Pc9D9c">
+                    <img src="https://down-br.img.susercontent.com/file/sg-11134201-7qvd6-lfauk7bziz78bd" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -2976,15 +2976,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/9KE6Pc9D9c">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/9KE6Pc9D9c">Camiseta Branca Fluminense Edição Fã 2022-2023</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$59,29 - R$69,83</data>
                   </div>
                 </a>
 
