--- a/index.html
+++ b/index.html
@@ -2995,8 +2995,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/9zTnCuV70m">
+                    <img src="https://down-br.img.susercontent.com/file/sg-11134201-7qvcq-lhg4mh7o17lkca  " style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3010,15 +3010,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/9zTnCuV70m">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/9zTnCuV70m">Camisa de Futebol Masculino [Patrocínios] 2023/24 Internacional Away Jersey</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$66,00 - R$110,00</data>
                   </div>
                 </a>
 
