--- a/index.html
+++ b/index.html
@@ -3029,8 +3029,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/9KE6PsKLZI">
+                    <img src="https://down-br.img.susercontent.com/file/sg-11134201-23020-0aooiuxoobnv0e" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3044,15 +3044,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/9KE6PsKLZI">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/9KE6PsKLZI">Vintage Santos 2012 Home Longe 12 13 Camiseta De Futebol Retro</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$74,00 - R$83,87</data>
                   </div>
                 </a>
 
