--- a/index.html
+++ b/index.html
@@ -3063,8 +3063,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/5Khxedf8Mw">
+                    <img src="https://down-br.img.susercontent.com/file/cn-11134207-7qukw-lgrrbc9lsuakfa" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3078,15 +3078,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/5Khxedf8Mw">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/5Khxedf8Mw">23-24 Athletico Paranaense Jersey Kit De Treinamento De Edição Especial</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$60,18 - R$79,18</data>
                   </div>
                 </a>
 
