--- a/index.html
+++ b/index.html
@@ -3097,8 +3097,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/qFYIUB2JN">
+                    <img src="https://down-br.img.susercontent.com/file/br-11134201-7qukw-leu7zr7l41d78a" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3112,15 +3112,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/qFYIUB2JN">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/qFYIUB2JN">22/23 Bragantino Red Bull Uniforme Masculino de Futebol Personalizado Camisas de Futebol para Treinamento Esportivo</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$59,89 - R$74,62</data>
                   </div>
                 </a>
 
